--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andwar's Workspace</title>
+    <!-- CrumbsUI -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Andwar22/CrumbsUI/dist/1.0.1/crumbs-ui.css">
   </head>
   <body>
     <div id="app"></div>
+
     <script type="module" src="/src/main.js"></script>
-    <script type="module" src="/src/assets/js/mix.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Andwar22/CrumbsUI/dist/1.0.1/crumbs-ui.js"></script>
   </body>
 </html>
