--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Andwar22/CrumbsUI/dist/1.0.1/crumbs-ui.css">
   </head>
   <body>
-    <div id="app"></div>q
+    <div id="app"></div>
 
     <script type="module" src="/src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Andwar22/CrumbsUI/dist/1.0.1/crumbs-ui.js"></script>
