--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andwar</title>
+    <title>Andwars</title>
     <!-- CrumbsUI -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Andwar22/CrumbsUI/dist/1.0.1/crumbs-ui.css">
   </head>
